refactored post view, added video view, cors fixed, custom scrollbar, masonry view, edit dialog added, Form Components added, source type matcher + preview type matcher

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@datorama/akita": "^7.0.1",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@hookform/resolvers": "^2.8.3",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
@@ -24,14 +25,20 @@
     "immer": "^9.0.7",
     "lodash-es": "^4.17.21",
     "next-transpile-modules": "^9.0.0",
+    "p-queue": "^7.1.0",
+    "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
     "rxjs": "^6.6.7",
     "rxjs-hooks": "^0.7.0",
-    "tailwindcss-filters": "^3.0.0"
+    "spinners-react": "^1.0.6",
+    "tailwindcss-filters": "^3.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^14.14.31",
+    "@types/p-queue": "^3.2.1",
     "@types/react": "^17.0.0",
     "autoprefixer": "^10.3.5",
     "electron": "^15.0.0",
