--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
+    "electron-dl": "^3.3.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
     "immer": "^9.0.7",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next-transpile-modules": "^9.0.0",
     "p-queue": "^7.1.0",
+    "queue-promise": "^2.2.1",
     "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
     "react-masonry-css": "^1.0.16",
@@ -33,9 +37,12 @@
     "rxjs-hooks": "^0.7.0",
     "spinners-react": "^1.0.6",
     "tailwindcss-filters": "^3.0.0",
+    "thenby": "^1.3.4",
+    "xhr2": "^0.2.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.177",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^14.14.31",
     "@types/p-queue": "^3.2.1",
