--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
-    "electron-dl": "^3.3.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
+    "electron-threads": "^1.0.2",
     "immer": "^9.0.7",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next-transpile-modules": "^9.0.0",
-    "p-queue": "^7.1.0",
     "queue-promise": "^2.2.1",
     "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
@@ -42,12 +41,13 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@electron/remote": "^2.0.1",
     "@types/lodash": "^4.14.177",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^14.14.31",
     "@types/p-queue": "^3.2.1",
     "@types/react": "^17.0.0",
-    "autoprefixer": "^10.3.5",
+    "autoprefixer": "^10.4.0",
     "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
     "fiber": "^1.0.4",
