--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
     "react-masonry-css": "^1.0.16",
+    "react-virtualized": "^9.22.3",
     "rxjs": "^6.6.7",
     "rxjs-hooks": "^0.7.0",
     "spinners-react": "^1.0.6",
@@ -47,6 +48,7 @@
     "@types/node": "^14.14.31",
     "@types/p-queue": "^3.2.1",
     "@types/react": "^17.0.0",
+    "@types/react-virtualized": "^9.21.15",
     "autoprefixer": "^10.4.0",
     "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
