--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.8.3",
+    "@popperjs/core": "^2.11.0",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
     "react-masonry-css": "^1.0.16",
+    "react-popper": "^2.2.5",
     "react-virtualized": "^9.22.3",
     "rxjs": "^6.6.7",
     "rxjs-hooks": "^0.7.0",
