post view refactor, added chakra ui, fixed settings memory leak, downloads now have booru origin saved, added plyr for video/audio playback, several refactors

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
     "@datorama/akita": "^7.0.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.8.3",
     "@popperjs/core": "^2.11.0",
+    "@rocketseat/react-plyr": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
@@ -25,10 +29,13 @@
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
     "electron-threads": "^1.0.2",
+    "framer-motion": "^4",
     "immer": "^9.0.7",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next-transpile-modules": "^9.0.0",
+    "plyr": "^3.6.9",
+    "plyr-react": "^3.1.0",
     "queue-promise": "^2.2.1",
     "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
@@ -55,7 +62,7 @@
     "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
     "fiber": "^1.0.4",
-    "next": "^12.0.4",
+    "next": "^12.0.7",
     "nextron": "^7.1.0",
     "postcss": "^8.3.7",
     "postcss-import": "^14.0.2",
