--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types"
+    ]
   },
   "include": [
     "next-env.d.ts",
